--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Player App</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
   </head>
   <body>
 
-    <div id="app">Music Player</div>
+    <div id="app" class="text-red-500">Music Player</div>
 
   </body>
 </html>
