--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="public/logo.ico" />
     <title>Music Player App</title>
     <link rel="stylesheet" href="/assets/css/main.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -211,7 +213,7 @@
       >
         <header class="space-y-2 px-5 md:px-8">
           <div class="flex justify-between items-center">
-            <div class="flex gap-2">
+            <div class="flex gap-1">
               <h3 class="text-white font-semibold text-xl sm:text-3xl">
                 Beat<span class="text-rose-500 font-bold">Tunes</span>
               </h3>
@@ -271,7 +273,7 @@
               <input
                 type="search"
                 placeholder="Search"
-                class="bg-gradient-to-r from-[#212735] to-[#151719] rounded-lg pl-8 pr-4 py-1 border-none outline-none focus:ring-1 focus:ring-black w-full ring-1 ring-zinc-700"
+                class="bg-gradient-to-r from-[#212735] to-[#151719] rounded-lg pl-8 pr-4 py-1.5 border-none outline-none focus:ring-1 focus:ring-zinc-800 w-full ring-1 ring-zinc-700 text-white text-sm"
               />
             </div>
             <span>
@@ -335,7 +337,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Youngblood</p>
-                      <p>sos</p>
+                      <p class="text-gray-300">sos</p>
                     </div>
                     <span>
                       <svg
@@ -361,7 +363,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Shape of You</p>
-                      <p>Ed Sheeran</p>
+                      <p class="text-gray-300">Ed Sheeran</p>
                     </div>
                     <span>
                       <svg
@@ -387,7 +389,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Let me Love You</p>
-                      <p>Dj Snake</p>
+                      <p class="text-gray-300">Dj Snake</p>
                     </div>
                     <span>
                       <svg
@@ -414,7 +416,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Despacito</p>
-                      <p>Luis Fonsi, Daddy Yankee</p>
+                      <p class="text-gray-300">Luis Fonsi, Daddy Yankee</p>
                     </div>
                     <span>
                       <svg
@@ -440,7 +442,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Thinking out Loud</p>
-                      <p>Ed Sheeran</p>
+                      <p class="text-gray-300">Ed Sheeran</p>
                     </div>
                     <span>
                       <svg
@@ -466,7 +468,7 @@
                   <div class="disc-popular-blur">
                     <div>
                       <p>Lose Control</p>
-                      <p>Teddy Swims</p>
+                      <p class="text-gray-300">Teddy Swims</p>
                     </div>
                     <span>
                       <svg
@@ -1057,8 +1059,6 @@
         </section>
       </main>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
