--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,8 @@
         </section>
       </main>
     </div>
+
+    <script type="module" src="data.json"></script>
     <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
