--- a/src/index.html
+++ b/src/index.html
@@ -1060,7 +1060,6 @@
       </main>
     </div>
 
-    <script type="module" src="data.json"></script>
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
