--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="public/logo.ico" />
     <title>Music Player App</title>
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/public/main.css" />
 
     <link
       rel="stylesheet"
@@ -250,7 +250,7 @@
               class="w-10 h-10 rounded-full overflow-hidden flex justify-center items-center"
             >
               <img
-                src="assets/img/image.png"
+                src="public/img/image.png"
                 alt="profile"
                 class="object-cover w-full h-full"
               />
@@ -325,12 +325,12 @@
               </p>
             </div>
             <div class="overflow-hidden">
-              <ul
+              <ul id="pupularUl"
                 class="grid gap-3 grid-cols-3 sm:flex sm:items-center w-fit px-5 md:px-8 sm:gap-5 sm:flex-wrap"
               >
-                <li class="li-popular relative">
+                <!-- <li class="li-popular relative group">
                   <img
-                    src="/assets/img/singer2.jpg"
+                    src="/public/img/singer2.jpg"
                     alt="singer2"
                     class="img-popular"
                   />
@@ -353,10 +353,10 @@
                       </svg>
                     </span>
                   </div>
-                </li>
-                <li class="li-popular relative">
+                </li> -->
+                <!-- <li class="li-popular relative">
                   <img
-                    src="/assets/img/singer3.jpg"
+                    src="/public/img/singer3.jpg"
                     alt="singer3"
                     class="img-popular"
                   />
@@ -382,7 +382,7 @@
                 </li>
                 <li class="li-popular relative">
                   <img
-                    src="/assets/img/singer1.jpg"
+                    src="/public/img/singer1.jpg"
                     alt="singer3"
                     class="img-popular"
                   />
@@ -409,7 +409,7 @@
 
                 <li class="li-popular relative">
                   <img
-                    src="/assets/img/song2.PNG"
+                    src="/public/img/song2.PNG"
                     alt="singer4"
                     class="img-popular"
                   />
@@ -435,7 +435,7 @@
                 </li>
                 <li class="li-popular relative">
                   <img
-                    src="/assets/img/song1.PNG"
+                    src="/public/img/song1.PNG"
                     alt="singer4"
                     class="img-popular"
                   />
@@ -461,7 +461,7 @@
                 </li>
                 <li class="li-popular relative">
                   <img
-                    src="/assets/img/singer4.jpg"
+                    src="/public/img/singer4.jpg"
                     alt="singer4"
                     class="img-popular"
                   />
@@ -484,7 +484,7 @@
                       </svg>
                     </span>
                   </div>
-                </li>
+                </li> -->
               </ul>
               <div class="swiper-pagination"></div>
             </div>
@@ -496,13 +496,13 @@
                 <h3 class="text-white font-semibold">Top Played</h3>
               </div>
               <div>
-                <ul class="md:flex md:flex-wrap md:gap-5">
-                  <li class="li-topplayed">
+                <ul id="topPlayed" class="md:flex md:flex-wrap md:gap-5">
+                  <!-- <li class="li-topplayed">
                     <div
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer1.jpg"
+                        src="public/img/singer1.jpg"
                         alt="singer1"
                         class="w-full h-full object-cover"
                       />
@@ -546,13 +546,13 @@
                         </span>
                       </div>
                     </div>
-                  </li>
-                  <li class="li-topplayed">
+                  </li> -->
+                  <!-- <li class="li-topplayed">
                     <div
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer2.jpg"
+                        src="public/img/singer2.jpg"
                         alt="singer2"
                         class="w-full h-full object-cover"
                       />
@@ -601,7 +601,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer3.jpg"
+                        src="public/img/singer3.jpg"
                         alt="singer3"
                         class="w-full h-full object-cover"
                       />
@@ -650,7 +650,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer4.jpg"
+                        src="public/img/singer4.jpg"
                         alt="singer4"
                         class="w-full h-full object-cover"
                       />
@@ -699,7 +699,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/song1.PNG"
+                        src="public/img/song1.PNG"
                         alt="song1"
                         class="w-full h-full object-cover"
                       />
@@ -748,7 +748,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/song2.PNG"
+                        src="public/img/song2.PNG"
                         alt="song2"
                         class="w-full h-full object-cover"
                       />
@@ -797,7 +797,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer1.jpg"
+                        src="public/img/singer1.jpg"
                         alt="singer1"
                         class="w-full h-full object-cover"
                       />
@@ -846,7 +846,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer2.jpg"
+                        src="public/img/singer2.jpg"
                         alt="singer2"
                         class="w-full h-full object-cover"
                       />
@@ -895,7 +895,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer3.jpg"
+                        src="public/img/singer3.jpg"
                         alt="singer3"
                         class="w-full h-full object-cover"
                       />
@@ -944,7 +944,7 @@
                       class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full"
                     >
                       <img
-                        src="assets/img/singer4.jpg"
+                        src="public/img/singer4.jpg"
                         alt="singer4"
                         class="w-full h-full object-cover"
                       />
@@ -986,7 +986,7 @@
                         </span>
                       </div>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -1000,18 +1000,18 @@
                 <div
                   class="overflow-hidden w-14 h-14 flex justify-center items-center rounded-full lg:w-52 lg:h-52 lg:rounded-lg xl:w-80 xl:h-72"
                 >
-                  <img
-                    src="assets/img/singer1.jpg"
+                  <img id="psImg"
+                    src="public/img/singer1.jpg"
                     alt="singer1"
                     class="w-full h-full object-cover"
                   />
                 </div>
                 <div class="flex-1 lg:space-y-1">
-                  <p class="text-white text-sm font-semibold">Yummy</p>
-                  <p class="text-gray-500 text-xs font-medium">Justin Bieber</p>
+                  <p id="psName" class="text-white text-sm font-semibold">Yummy</p>
+                  <p id="psArtist" class="text-gray-500 text-xs font-medium">Justin Bieber</p>
                 </div>
                 <div
-                  class="text-white text-gray-500 flex items-center gap-3 justify-center"
+                  class="text-gray-500 flex items-center gap-3 justify-center"
                 >
                   <span class="text-white transform rotate-180">
                     <svg
@@ -1060,6 +1060,8 @@
       </main>
     </div>
 
+    <script src="/public/js/Album.js"></script>
+    <script src="/public/js/song.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
