--- a/index.html
+++ b/index.html
@@ -1060,8 +1060,8 @@
       </main>
     </div>
 
-    <script src="/public/js/Album.js"></script>
-    <script src="/public/js/song.js"></script>
+    <script src="js/Album.js"></script>
+    <script src="js/song.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
