--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
 
                 <div
                   class="text-gray-500 flex items-center gap-3 justify-center">
-                  <span class="text-white transform rotate-180">
+                  <span id="preSongBtn" class="text-white transform rotate-180">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
@@ -1037,7 +1037,7 @@
                     </span>
                   </div>
 
-                  <span class="text-white">
+                  <span class="text-white" id="nextSongBtn">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
