--- a/index.html
+++ b/index.html
@@ -223,14 +223,11 @@
 
             </div>
             <div
-              class="w-10 h-10 rounded-full overflow-hidden flex justify-center items-center">
-              <img
-                src="public/img/image.png"
-                alt="profile"
-                class="object-cover w-full h-full" />
+              class=" text-txtcolor">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M5.85 17.1q1.275-.975 2.85-1.537T12 15t3.3.563t2.85 1.537q.875-1.025 1.363-2.325T20 12q0-3.325-2.337-5.663T12 4T6.337 6.338T4 12q0 1.475.488 2.775T5.85 17.1M12 13q-1.475 0-2.488-1.012T8.5 9.5t1.013-2.488T12 6t2.488 1.013T15.5 9.5t-1.012 2.488T12 13m0 9q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22"/></svg>
             </div>
           </div>
-          <div class="flex items-center gap-2 lg:absolute lg:top-3 lg:right-20">
+          <div class="flex items-center gap-2 lg:absolute lg:top-1 lg:right-20">
             <div class="flex items-center relative flex-1">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -996,7 +993,7 @@
                 </div>
 
                 <div
-                  class="text-gray-500 flex items-center gap-3 justify-center">
+                  class="text-gray-500 flex items-center gap-3 justify-center lg:py-4">
                   <span id="preSongBtn" class="text-white transform rotate-180">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
